--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -1,5 +1,5 @@
 {
-  "\"No Motion\" Detektor": "\"No Motion\" - Detektor",
+  "\"No Motion\" Detector": "\"No Motion\" - Detektor",
   "# of Allow MJPEG Clients": "# av tillåtna MJPEG Klienter <small>0 för oändlig</small>",
   "180 Degrees": "180 Grader",
   "2-Factor Authentication": "2-Faktors Autentisering",
