Update Power Video Viewer to Version 5
- The return of vis.js for the Power Video Viewer. Now you are able to view multiple monitor's videos at a single time. Control speed
+ move confirm window js
+ remove some extra files

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -757,6 +757,12 @@
    "Thumbnail": "Thumbnail",
    "Host Type": "Host Type",
    "Edit": "Edit",
+   "Next Video": "Next Video",
+   "Previous Video": "Previous Video",
+   "Please Wait...": "Please Wait...",
+   "Select a Monitor": "Select a Monitor",
+   "Per Monitor": "Per Monitor",
+   "Matrices": "Matrices",
    "Show Matrices": "Show Matrices",
    "Show Matrix": "Show Matrix",
    "No Monitor ID Present in Form": "No Monitor ID Present in Form",
