make "Zip and Download" a client side interaction

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -739,6 +739,8 @@
    "Monitor mode is already": "Monitor mode is already",
    "Monitor or Key does not exist.": "Monitor or Key does not exist.",
    "No Group with this key exists": "No Group with this key exists",
+   "Downloading Videos": "Downloading Videos",
+   "Zipping Videos": "Zipping Videos",
    "Success": "Success",
    "Trigger Successful": "Trigger Successful",
    "Trigger Blocked": "Trigger Blocked",
@@ -870,7 +872,7 @@
    "Main": "Main",
    "Storage Location": "Storage Location",
    "Recommended": "Recommended",
-   "Please Wait for Completion": "Please Wait for Completion, Depending on the number of files selected this may take some time. Refresh to check again.",
+   "Please Wait for Completion": "Please Wait for Completion, Depending on the number of files selected this may take some time.",
    "flv": "flv",
    "FLV": "FLV",
    "FLV Stream Type": "FLV Stream Type",
