minor cleanup and fixes

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -70,6 +70,7 @@
    "Motion Detection": "Motion Detection",
    "Object Detection": "Object Detection",
    "JPEG Mode": "JPEG Mode",
+   "Reconnect Stream": "Reconnect Stream",
    "Order Streams": "Order Streams",
    "Hide Notes": "Hide Notes",
    "Example": "Example",
@@ -742,6 +743,7 @@
    "Downloading Videos": "Downloading Videos",
    "Zipping Videos": "Zipping Videos",
    "Success": "Success",
+   "Search Settings": "Search Settings",
    "Trigger Successful": "Trigger Successful",
    "Trigger Blocked": "Trigger Blocked",
    "No such file": "No such file",
