--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -20,7 +20,7 @@
    "Accounts": "Konton",
    "Action for Selected": "Åtgärder för Utvalda",
    "Add Channel": "Lägg Till Kanal",
-   "Add Input Feed": "Lägg till In flöde",
+   "Add Input Feed": "Lägg till Inmatningsflöde",
    "Add Map": "Lägg Till Karta",
    "Add Monitor": "Lägg Till Kamera",
    "Add New": "Lägg Till Ny",
@@ -41,7 +41,7 @@
    "Allow Next Command": "Ge Nästa Kommando <small>i Minuter</small>",
    "Allow Next Discord Alert": "Låt Nästa Discord Alert <small>i Minuter</small>",
    "Allow Next Email": "Tillåter Nästa E-post <small>inom några Minuter</small>",
-   "Allow Next Trigger": "Låt Nästa Trigger <small>i Millisekunder</small>",
+   "Allow Next Trigger": "Tillåt Nästa Trigger <small>i Millisekunder</small>",
    "Allowed IPs": "Tillåtna IPs",
    "Already exists": "Finns redan",
    "Always": "Alltid",
@@ -131,7 +131,7 @@
    "Close": "Stäng",
    "Closed": "Stängdes",
    "Color Threshold": "Färg Tröskel",
-   "Command on Trigger": "Kommando på Utlösare",
+   "Command on Trigger": "Kommando på Trigger",
    "Command": "Kommandot",
    "Complete Stream URL": "Komplett Stream URL",
    "Conditions" : "Villkor",
@@ -152,19 +152,19 @@
    "Controls and Logs": "Kontroller och Loggar",
    "Copy Connection Settings": "Kopiera Anslutning Inställningar",
    "Copy Custom Settings": "Kopiera Anpassade Inställningar",                                               
-   "Copy Detector Settings": "Kopiera Detektor Inställningar",
-   "Copy Group Settings": "Kopiera Grupp Inställningar",
-   "Copy Input Settings": "Kopiera Ingångs Inställningar",
+   "Copy Detector Settings": "Kopiera Detektorinställningar",
+   "Copy Group Settings": "Kopiera Gruppinställningar",
+   "Copy Input Settings": "Kopiera inmatningsinställningar",
    "Copy JPEG API Settings": "Kopiera JPEG-API Inställningar",
    "Copy Logging Settings": "Kopiera Inställningar För Loggning",
-   "Copy Mode": "Kopiera Läge",
-   "Copy Recording Settings": "Kopiera Inspelnings Inställningar",
+   "Copy Mode": "Kopierings Läge",
+   "Copy Recording Settings": "Kopiera Inspelningsinställningar",
    "Copy Settings": "Kopiera Inställningar",
    "Copy Stream Channel Settings": "Kopiera Stream Kanal",
-   "Copy Stream Settings": "Kopiera Stream Inställningar",
-   "Copy to Settings": "Kopiera Inställningar",
+   "Copy Stream Settings": "Kopiera Streaminställningar",
+   "Copy to Settings": "Kopiera till Inställningar",
    "Could not create Bucket.": "Kunde inte skapa Bucket.",
-   "Country of Plates": "Land av Plattor",
+   "Country of Plates": "Country of Plates",
    "Counts of Motion": "Antal Rörelser",
    "Create Sub-Accounts at /admin": "Skapa Sub-Konton på /admin",
    "Creating New Account": "Skapa Nytt Konto",
@@ -177,7 +177,7 @@
    "DB Lost.. Retrying..": "Databasen Förlorad.. Försöker Igen..",
    "DESC": "DESC",
    "Dashboard Language": "Språk Instrumentpanel",
-   "Dashboard": "Instrumentpanelen",
+   "Dashboard": "Instrumentpanel",
    "Dashcam (Streamer v2)": "Dashcam (Streamer v2)",
    "Dashcam": "Dashcam",
    "Database Not Found": "Databasen Hittades Inte",
@@ -205,6 +205,7 @@
    "DeleteMonitorText": "Vill du ta bort denna kamera? Du kan inte återställa den. Du kan välja att behålla filerna i filsystemet. Om du väljer att återskapa en skärm med samma ID-videor och händelser som kommer att bli synliga i översikten.",
    "DeleteMonitorsText": "Vill du ta bort dessa Kameror? Du kan inte återställa dem. Du kan välja att behålla filerna för dessa Id: n i filsystemet. Om du väljer att återskapa en kamera med en av de IDs videor och händelser som kommer att bli synliga i översikten.",
    "DeleteSelectedVideosMsg": "Vill du ta bort dessa filmer? Du kan inte återställa dem.",
+   "NoSelectedMsg": "Du måste välja minst en video.",
    "DeleteVideoMsg": "Vill du ta bort denna video? Du kan inte återställa den.",
    "Deleted Schedule Configuration": "Borttagen Schema Konfiguration",
    "Deleted State Configuration": "Borttaget Konfiguration",
@@ -297,7 +298,7 @@
    "Female": "Kvinna",
    "Fields cannot be empty": "Fält får inte vara tomt",
    "File Delete Error": "Fel vid radering av fil",
-   "File Not Exist": "Fil Existerar Inte",
+   "File Not Exist": "Filen Existerar Inte",
    "File Not Found in Database": "Filen kan Inte Hittas i Databasen",
    "File Not Found in Filesystem": "Filen kan Inte Hittas i Filsystemet",
    "File Not Found": "Filen Kunde Inte Hittas",
@@ -316,12 +317,12 @@
    "Filters": "Filter",
    "FiltersUpdatedText": "Dina ändringar har sparats och tillämpas.",
    "Find Where": "Hitta Där",
-   "First stream in feed": "Första stream i foder",
+   "First stream in feed": "Första stream i flödet",
    "Fix Video": "Fixa Video",
    "Fix": "Fixa",
    "FixVideoMsg": "Vill du fixa denna video? Du kan inte ångra den här åtgärden.",
    "Flush PM2 Logs": "Spola PM2 Loggar",
-   "Font Path": "Font Väg",
+   "Font Path": "Font Sökväg",
    "Font Size": "Font Storlek",
    "For Group": "För Gruppen",
    "Force Monitors Per Row": "Tvinga Kameror Per Rad",
@@ -330,7 +331,7 @@
    "Found Devices": "Hittade Enheter",
    "Frame Rate": "Bildhastighet",
    "Friday": "Fredag",
-   "Full Frame Detection": "Full Ram Upptäckt",
+   "Full Frame Detection": "Full Bild Detektion",
    "Full Stream URL": "Full Stream URL",
    "Full URL Path": "Fullständiga URL-Sökvägen",
    "Fullscreen": "Fullskärm",
@@ -340,16 +341,16 @@
    "Global Detector Settings": "Globala Detektor Inställningar",
    "Greater Than or Equal to": "Större Än eller Lika med",
    "Greater Than": "Större Än",
-   "Group Key is in use.": "Gruppen Nyckeln är i bruk.",
-   "Group Key": "Gruppen Nyckeln",
+   "Group Key is in use.": "Grupp Nyckeln används redan.",
+   "Group Key": "Grupp Nyckel",
    "Group Name": "Grupp Namn",
    "Grouping": "Gruppering",
-   "H.264 / H.265 / H.265+": "H. 264 / H. 265 / H. 265 ",
+   "H.264 / H.265 / H.265+": "H.264 / H.265 / H.265 ",
    "HEVC (H.265)": "HEVC (H. 265)",
    "HLS (.m3u8)": "HLS (.m3u8)",
    "HLS (includes Audio)": "HLS (innehåller Ljud)",
    "HLS Audio Encoder": "Audio Encoder",
-   "HLS List Size": "Lista Storlek",
+   "HLS List Size": "List Storlek",
    "HLS Live Start Index": "HLS Live Start Index",
    "HLS Preset": "Förinställd Mall",
    "HLS Segment Length": "Segment Längd <small>i Sekunder</small>",
@@ -365,38 +366,38 @@
    "Host Type": "Värd Typ",
    "Host": "Värd",
    "Hotswap Modes (Watch-Only)": "Hotswap Lägen (Titta Endast)",
-   "How to Record": "Hur att Spela in",
+   "How to Record": "Inspelningsläge",
    "IP Address": "IP-Adress",
    "Identity": "Identitet",
    "IdentityText1": "Detta är hur systemet kommer att identifiera data för denna stream. Du kan inte ändra <b>Skärm-ID</b> när du har tryckt på spara. Om du vill kan du göra <b>Övervaka ID</b> mer läsbar innan du fortsätter.",
    "IdentityText2": "Du kan kopiera en kamera genom att ändra <b>Skärm-ID</b> och sedan trycka på spara. Du <b>kan inte</b> använda ID på en kamera som redan finns eller kommer det att spara över att övervaka databas information.",
    "Idle": "Inaktiv",
    "Image Height": "Bildens Höjd",
-   "Image Location": "Bilden var <small>Absolut Sökväg eller lämna tomt för att använda globala</small>",
+   "Image Location": "Bild Sökväg <small>Absolut Sökväg eller lämna tomt för att använda globala</small>",
    "Image Position": "Bild Position",
    "Image Width": "Bildens Bredd",
    "Import Monitor Configuration": "Importera Kameror",
    "Import": "Importera",
-   "ImportMonitorConfigurationText": "Om du gör detta kommer overrwrite eventuella förändringar som för närvarande inte är sparad. Importerade ändringar kommer att tillämpas endast när du trycker på <b>Spara</b>.",
-   "ImportMultiMonitorConfigurationText": "Om du gör detta, kommer alla Kameror skrivas över med Id:n i importfilen.",
+   "ImportMonitorConfigurationText": "Om du gör detta kommer eventuella förändringar som för närvarande inte är sparade att skrivas över. Importerade ändringar kommer att tillämpas endast när du trycker på <b>Spara</b>.",
+   "ImportMultiMonitorConfigurationText": "Om du gör detta, kommer alla Kameror skrivas över med Id:n från importfilen.",
    "In": "I",
    "Incorrect Settings Chosen": "Felaktiga Inställningar Valt",
    "Indifference": "Indifferens",
-   "Input Feed": "Ingång Flöde",
-   "Input Flags": "Ingång Flaggor",
-   "Input Selector": "Ingångs Väljare",
-   "Input Settings": "Ingång Inställningar",
-   "Input Type": "Ingång Typ",
-   "Input": "Ingång",
-   "InputText1": "I detta avsnitt berättar Shinobi hur man förbrukar stream. För optimal prestanda försöka finjustera kamerans interna inställningar. Hitta följande alternativ och ställa in dem som på bilden. För att hitta din kamera kan du använda den <b>inbyggda ONVIF-Scanner</b> av Shinobi. Vissa ONVIF-kameror som kräver användning av ett verktyg för att ändra sina interna inställningar. Om du inte kan hitta dina kameror kan du prova <a href=\"http://cdn.shinobi.video/installers/odm-v2.2.250.msi\">ONVIF enhetshanteraren för Windows</a>.",
-   "InputText2": "<ul><li><b>Bildfrekvens (BPS) :</b> Hög : 10 - 15 bildrutor per sekund, low (Låg): 2-5 FPS</li><li><b>Jag-ram intervall :</b> 1</li><li><b>Bithastighet Typ :</b> Variabel bithastighet (VBR)</li><li><b>Bithastighet :</b> mellan 256kbps - 1000kbps</li></ul>",
-   "InputText3": "Om du behöver hjälp vilken ingångs typ din kamera har att du kan ta en titt i <a href=\"http://shinobi.video/docs/cameras\" target=\"_blank\">Kameran Webbadresser Lista</a> på Shinobi webbplats.",
-   "Inserted Schedule Configuration": "Insatt Schema Konfiguration",
-   "Inserted State Configuration": "Införas Stat Konfiguration",
-   "Invalid Data": "Ogiltiga Data",
-   "Invalid JSON": "Ogiltiga JSON",
-   "InvalidJSONText": "Se till att det är ett giltigt JSON-sträng för Shinobi Kameror.",
-   "JPEG (Auto Enables JPEG API)": "JPEG (Auto Gör att JPEG-API)",
+   "Input Feed": "Inmatningsflöde",
+   "Input Flags": "Inmatningsflaggor",
+   "Input Selector": "Ingångsväljare",
+   "Input Settings": "Inmatningsinställningar",
+   "Input Type": "Ingångstyp",
+   "Input": "Inmatning",
+   "InputText1": "I detta avsnitt berättar Shinobi hur man tar emot en stream. För optimal prestanda, försök finjustera kamerans interna inställningar. Hitta följande alternativ och ställa in dem som på bilden. För att hitta din kamera kan du använda den <b>inbyggda ONVIF-Scannern</b> av Shinobi. Vissa ONVIF-kameror kräver ett verktyg för att ändra sina interna inställningar. Om du inte kan hitta dina kameror kan du prova <a href=\"http://cdn.shinobi.video/installers/odm-v2.2.250.msi\">ONVIF enhetshanteraren för Windows</a>.",
+   "InputText2": "<ul><li><b>Bildfrekvens (FPS) :</b> Hög : 10 - 15 bildrutor per sekund, low (Låg): 2-5 FPS</li><li><b>I-frame intervall :</b> 1</li><li><b>Bithastighet Typ :</b> Variabel bithastighet (VBR)</li><li><b>Bithastighet :</b> mellan 256kbps - 1000kbps</li></ul>",
+   "InputText3": "Om du behöver hjälp vilken inmatningstyp din kamera har att du kan ta en titt i <a href=\"http://shinobi.video/docs/cameras\" target=\"_blank\">Kameran Webbadresser Lista</a> på Shinobi webbplats.",
+   "Inserted Schedule Configuration": "Infogad Schema Konfiguration",
+   "Inserted State Configuration": "Infogad State Konfiguration",
+   "Invalid Data": "Ogiltig Data",
+   "Invalid JSON": "Ogiltig JSON",
+   "InvalidJSONText": "Se till att det är en giltig JSON-sträng för Shinobi Kameror.",
+   "JPEG (Auto Enables JPEG API)": "JPEG (Auto Aktiverar JPEG-API)",
    "JPEG API": "JPEG-API",
    "JPEG Error": "JPEG Fel",
    "JPEG Mode": "JPEG-Läge",
@@ -405,19 +406,19 @@
    "January" : "Januari",
    "July" : "Juli",
    "June" : "Juni",
-   "LDAP Success": "LDAP Framgång",
+   "LDAP Success": "LDAP Lyckad",
    "LDAP User Authenticated": "LDAP-Användare Autentiseras",
-   "LDAP User is New": "LDAP-Användare Nya",
+   "LDAP User is New": "LDAP-Användare är Ny",
    "LDAP": "LDAP",
    "Landing Page": "Målsidan",
    "Launch in New Window": "Starta i Nytt Fönster",
    "Leave blank for random.": "Lämna tomt för slumpmässiga.",
    "Leave blank for unlimited": "Lämna tomt för obegränsad",
-   "Left Stop": "Vänster Sluta <small>URL-Adress</small>",
+   "Left Stop": "Vänster Stop <small>URL-Adress</small>",
    "Left": "Vänster <small>URL-Adress</small>",
    "Less Than or Equal to": "Mindre Än eller Lika med",
    "Less Than": "Mindre Än",
-   "License Plate Detector": "Registreringsskylt Detektor",
+   "License Plate Detector": "Registreringsskylts Detektor",
    "Like": "Som",
    "Limited": "Begränsad",
    "Link Shinobi": "Länka Shinobi",
@@ -510,7 +511,7 @@
    "No Monitors Selected": "Inga Kameror valda",
    "No Region": "Ingen Region",
    "No Rotation": "Ingen Rotation",
-   "No Videos Found": "Inga Videor Som Finns",
+   "No Videos Found": "Inga Videor Finns",
    "No Videos Selected": "Inga videor valda",
    "No such file": "Ingen sådan fil",
    "No": "Nej",
@@ -583,7 +584,7 @@
    "Primary Engine": "Primär Motor",
    "Primary Input": "Primär Ingång",
    "Privileges": "Privilegier",
-   "Probe Size": "Sonden Storlek",
+   "Probe Size": "Probe Storlek",
    "Process Already Running": "Processen är Redan Igång",
    "Process Crashed for Monitor": "Processen har Kraschat för Kamera",
    "Process Not Running": "Processen Körs Inte",
@@ -705,7 +706,7 @@
    "State Configuration Not Found": "Tillstånds Konfiguration Finns Inte",
    "State Configuration has no monitors associated": "Tillstånds Konfiguration har inga Kameror Associerad",
    "Status Changed": "Status Ändras",
-   "Status Indicator": "Status Indikator",
+   "Reconnect Stream": "Återanslut Stream",
    "Stop Command": "Stopp Kommando",
    "Stop URL": "Stopp URL",
    "Stop": "Stopp",
