--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -784,7 +784,7 @@
    "Up": "Upp <small>URL-Adressen,</small>",
    "Update to Development": "Uppdatera till Development",
    "Update to Master": "Uppdatera till Master",
-   "Update": "Uppdatering",
+   "Update": "Uppdatera",
    "Upload File": "Ladda Upp Fil",
    "Uploaders": "Uppladdare",
    "Use Built-In": "Använd Inbyggd",
@@ -916,9 +916,9 @@
    "mjpeg_cuvid": "MJPEG CUVID",
    "modifyVideoText1": "Metoden inte existerar. Kontrollera att det sista värdet av URL:en är inte tom.",
    "monSavedButNotCopied": "Din Kamera har sparats men inte kopieras till en annan Kamera.",
-   "monitorEditFailedMaxReached": "Ditt konto har uppnått den maximala antal kameror som kan skapas. Tala till en administratör om du vill att detta ändras.",
+   "monitorEditFailedMaxReached": "Ditt konto har uppnått det maximala antalet kameror som kan skapas. Tala till en administratör om du vill att detta ändras.",
    "monitorEditText1": "Ogiltiga Data, Kontrollera för att se att detta är en giltig import sträng.",
-   "monitorEditText2": "Ogiltig Informations Sträng. Kontrollera för att se att det är en JSON-sträng och inte en vanlig objekt som skickats.",
+   "monitorEditText2": "Ogiltig Informations Sträng. Kontrollera för att se att det är en JSON-sträng och inte ett objekt som skickats.",
    "monitorGetText1": "Ofullständig begäran, ta bort sista snedstreck i URL-adressen eller sätt acceptabelt värde.",
    "months": "månader",
    "mpeg2_mmal": "MPEG-2 (Raspberry Pi)",
