Add Zoom In Magnifier to live stream and Power Video
+ adjust logWriter flood check timeout
+ minor cleanup (removing ";" just for you @kevinGodell)

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -90,8 +90,8 @@
    "Connection timed out": "Connection timed out",
    "skipPingText1": "Try setting \"Skip Ping\" to Yes.",
    "Ping Failed": "Ping Failed",
-   "Zoom In": "Zoom In <small>URL Address</small>",
-   "Zoom Out": "Zoom Out <small>URL Address</small>",
+   "Zoom In": "Zoom In",
+   "Zoom Out": "Zoom Out",
    "Enable Nightvision": "Enable Nightvision",
    "Disable Nightvision": "Disable Nightvision",
    "Date": "Date",
