--- a/languages/sv_SE.json
+++ b/languages/sv_SE.json
@@ -11,8 +11,10 @@
 "API Key": "API-Nyckel",
 "API Keys": "API-Nycklar",
 "API": "API",
-"APIKeyAddedText": "Du kan använda den här Nyckeln nu.",
-"APIKeyDeletedText": "Nyckeln har tagits bort. Det kommer inte längre att fungera.",
+"APIKeyAddedText": "Du kan använda den här API Nyckeln nu.",
+"APIKeyDeletedText": "API Nyckeln har tagits bort. Den kommer inte längre att fungera.",
+"Enter atleast one IP": "Ange minst ett IP",
+"DeleteAPIKeyMsg": "Vill du radera denna API Nyckel? Du kan inte återskapa den.",
 "ASC": "Stigande",
 "Accelerator": "Accelerator",
 "Account Info": "Konto Information",
@@ -193,7 +195,7 @@
 "Delete Matches": "Ta bort Matchningar",
 "Delete Monitor State?": "Ta Bort Monitor State",
 "Delete Monitor States Preset": "Ta Bort Monitor States Preset",
-"Delete Monitor and Files": "Ta Bort Kamera och Filer",
+"Delete Monitors and Files": "Ta Bort Kamera och Filer",
 "Delete Monitor": "Ta Bort Kamera",
 "Delete Motionless Video": "Ta Bort Orörlig Video",
 "Delete Motionless Videos (Record)": "Ta Bort Orörlig Videor (Inspelad)",
@@ -201,8 +203,8 @@
 "Delete Video": "Ta Bort Video",
 "Delete selected": "Radera valda",
 "Delete": "Ta bort",
-"DeleteMonitorText": "Vill du ta bort denna kamera? Du kan inte återställa den. Du kan välja att behålla filerna i filsystemet. Om du väljer att återskapa en kamera med samma ID-videor och händelser som kommer att bli synliga i översikten.",
-"DeleteMonitorsText": "Vill du ta bort dessa Kameror? Du kan inte återställa dem. Du kan välja att behålla filerna för dessa Id: n i filsystemet. Om du väljer att återskapa en kamera med en av de IDs videor och händelser som kommer att bli synliga i översikten.",
+"DeleteMonitorText": "Vill du ta bort denna kamera? Du kan inte återställa den. Du kan välja att behålla filerna i filsystemet. Om du väljer att återskapa en kamera med samma ID kommer videor och händelser bli synliga i översikten.",
+"DeleteMonitorsText": "Vill du ta bort dessa Kameror? Du kan inte återställa dem. Du kan välja att behålla filerna för dessa Id:n i filsystemet. Om du väljer att återskapa en kamera med en av de ID:n kommer videor och händelser bli synliga i översikten.",
 "DeleteSelectedVideosMsg": "Vill du ta bort dessa filmer? Du kan inte återställa dem.",
 "NoSelectedMsg": "Du måste välja minst en video.",
 "DeleteVideoMsg": "Vill du ta bort denna video? Du kan inte återställa den.",
