--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -957,5 +957,7 @@
    "Alert Sound Delay":"Alert Sound Delay",
    "powerVideoEventLimit":"You have set a high event limit. Are you sure you want to make this request?",
    "There are no monitors that you can view with this account.":"There are no monitors that you can view with this account.",
+   "Delete Monitors and Files": "Delete Monitors and Files",
+   "Select atleast one monitor to delete": "Select atleast one monitor to delete.",
    "Use Built-In":"Use Built-In"
 }
