add frame minimum (30 frames) to timelapse mp4 builder

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -35,6 +35,7 @@
    "Input Settings": "Input Settings",
    "Connection": "Connection",
    "Video Set": "Video Set",
+   "notEnoughFramesText1": "Not Enough Frames for compilation.",
    "Allow API Trigger": "Allow API Trigger",
    "When Detector is Off": "When Detector is Off",
    "When Detector is On": "When Detector is On",
