fix monitor import base object
+ add copy stream channels

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -940,6 +940,7 @@
    "Show Regions of Interest":"Show Regions of Interest",
    "Confidence of Detection":"Confidence of Detection",
    "Edit Selected":"Edit Selected",
+   "Copy Stream Channels":"Copy Stream Channels",
    "Copy Settings":"Copy Settings",
    "Copy to Settings":"Copy to Settings",
    "Copy Mode":"Copy Mode",
