Update No Motion Detector; Add Discord Notification

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -562,6 +562,7 @@
    "Full Frame Detection": "Full Frame Detection",
    "Country of Plates": "Country of Plates",
    "Email on No Motion": "Email on \"No Motion\"",
+   "Discord on No Motion": "Discord on \"No Motion\"",
    "Timeout": "Timeout",
    "Controllable": "Controllable",
    "Custom Base URL": "Custom Base URL <small>Leave blank to use Host URL</small>",
