Add Webhook and Command to No Motion Detector

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -532,8 +532,9 @@
    "Webhook URL": "Webhook URL",
    "Command on Trigger": "Command on Trigger",
    "Command": "Command",
-   "Allow Next Command": "Allow Next Command <small>in Minutes</small>",
-   "Allow Next Trigger": "Allow Next Trigger <small>in Milliseconds</small>",
+   "Allow Next Webhook": "Allow Next Webhook",
+   "Allow Next Command": "Allow Next Command",
+   "Allow Next Trigger": "Allow Next Trigger",
    "Save Events to SQL": "Save Events to SQL",
    "Email on Trigger": "Email on Trigger <small>Emails go to the main account holder's login address.</small>",
    "Attach Video Clip": "Attach Video Clip",
