Add Pushover Notification code (does not work yet)

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -19,6 +19,8 @@
    "Remember Me": "Remember Me",
    "Process Already Running": "Process Already Running",
    "Process Not Running": "Process Not Running",
+   "User ID": "User ID",
+   "User Key": "User Key",
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
@@ -291,6 +293,7 @@
    "aws_accessKeyId": "Access Key Id",
    "aws_secretAccessKey": "Secret Access Key",
    "Discord Bot": "Discord Bot",
+   "Pushover": "Pushover",
    "URL": "URL",
    "Operating Hours": "Operating Hours",
    "Autosave": "Autosave",
@@ -543,8 +546,10 @@
    "ErrorWhileDecodingText": "Your hardware may have an unstable connection to the network. Check your network connections.",
    "Discord": "Discord",
    "Discord Alert on Trigger": "Discord Alert on Trigger",
+   "Pushover Alert on Trigger": "Pushover Alert on Trigger",
    "Allow Next Email": "Allow Next Email <small>in Minutes</small>",
    "Allow Next Discord Alert": "Allow Next Discord Alert <small>in Minutes</small>",
+   "Allow Next Pushover Alert": "Allow Next Pushover Alert <small>in Minutes</small>",
    "DiscordLoggedIn": "Discord Bot Authenticated",
    "DiscordFailedText": "Sending to Discord Failed",
    "DiscordErrorText": "Sending to Discord caused an Error",
