Revert "Merge branch 'always_record_on_motion' into dev"
This reverts commit 5f804ce396152cab41794a387f0c1aabb4a9df07, reversing
changes made to 184bc2fa6963cad132f113ea04d5caf7f03b22fb.

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -969,6 +969,5 @@
    "There are no monitors that you can view with this account.":"There are no monitors that you can view with this account.",
    "Delete Monitors and Files": "Delete Monitors and Files",
    "Select atleast one monitor to delete": "Select atleast one monitor to delete.",
-   "Use Built-In":"Use Built-In",
-   "Start recording on motion":"Start recording on motion"
+   "Use Built-In":"Use Built-In"
 }
