--- a/plugins/face/faceManagerCustomAutoLoadLibrary/languages/en_CA.json
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/languages/en_CA.json
@@ -1,4 +1,5 @@
 {
+    "Face Name": "Face Name",
     "faceManager": "Face Manager",
     "deleteImage": "Delete Image",
     "deleteImageText": "Are you sure you want to delete this image? it will not be recoverable."
