Face Manager : prettier UI
- Access the Face Manager in the Super User panel

--- a/plugins/face/faceManagerCustomAutoLoadLibrary/languages/en_CA.json
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/languages/en_CA.json
@@ -1,4 +1,7 @@
 {
+    "Upload Images": "Upload Images",
+    "Images Sent": "Images Sent",
+    "Click to Upload Images": "Click to Upload Images",
     "Face Name": "Face Name",
     "faceManager": "Face Manager",
     "deleteImage": "Delete Image",
