--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -22,6 +22,7 @@
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
+   "Use Camera Timestamps": "Use Camera Timestamps",
    "Power Viewer": "Power Viewer",
    "Power Video Viewer": "Power Video Viewer",
    "Time-lapse": "Time-lapse",
