Add Basic Object Counting mechanism

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -30,6 +30,8 @@
    "Open All Monitors": "Open All Monitors",
    "Accounts": "Accounts",
    "Settings": "Settings",
+   "Count Objects only inside Regions": "Count Objects only inside Regions",
+   "Count Objects": "Count Objects",
    "Cards": "Cards",
    "No Region": "No Region",
    "Recording FPS": "Recording FPS",
