light touch up on timelapse performance and UI

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -19,6 +19,8 @@
    "Remember Me": "Remember Me",
    "Process Already Running": "Process Already Running",
    "Process Not Running": "Process Not Running",
+   "Play": "Play",
+   "Pause": "Pause",
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
