Add option for automatic private backup of monitors to ShinobiHub
- This feature is for Subscribers only.

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -19,6 +19,7 @@
    "Remember Me": "Remember Me",
    "Process Already Running": "Process Already Running",
    "Process Not Running": "Process Not Running",
+   "ShinobiHub": "ShinobiHub",
    "Play": "Play",
    "Pause": "Pause",
    "RAM": "RAM",
