Add API method to get configurations
- by default gets user uploaded configurations

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -25,6 +25,7 @@
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
+   "No API Key": "No API Key",
    "Use Camera Timestamps": "Use Camera Timestamps",
    "Power Viewer": "Power Viewer",
    "Power Video Viewer": "Power Video Viewer",
