Add proper language vars for ShinobiHub options

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -20,6 +20,14 @@
    "Process Already Running": "Process Already Running",
    "Process Not Running": "Process Not Running",
    "ShinobiHub": "ShinobiHub",
+   "Oldest": "Oldest",
+   "Newest": "Newest",
+   "Title": "Title",
+   "Subtitle": "Subtitle",
+   "Date Added": "Date Added",
+   "Date Updated": "Date Updated",
+   "Public on ShinobiHub": "Public on ShinobiHub",
+   "Uploaded Only": "Uploaded Only",
    "Play": "Play",
    "Pause": "Pause",
    "RAM": "RAM",
