display changes in Preset with humanized name tags

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -805,6 +805,7 @@
    "Select a Monitor": "Select a Monitor",
    "Per Monitor": "Per Monitor",
    "Matrices": "Matrices",
+   "Preset Name": "Preset Name",
    "Show Matrices": "Show Matrices",
    "Show Matrix": "Show Matrix",
    "No Monitor ID Present in Form": "No Monitor ID Present in Form",
