--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -522,6 +522,8 @@
    "Delete Monitor State?": "Delete Monitor State",
    "deleteMonitorStateText1": "Do you want to delete this Monitor States Preset? The monitor configurations associated cannot be recovered.",
    "deleteMonitorStateText2": "Do you want to delete this Monitor's Preset?",
+   "monitorStatesError": "Monitor Presets Error",
+   "monitorStateNotEnoughChanges": "You need to make a change in your monitor configuration before attempting to add it to a Preset.",
    "Search Images": "Search Images",
    "Launch in New Window": "Launch in New Window",
    "Preset": "Preset",
