--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -522,6 +522,7 @@
    "Delete Monitor State?": "Delete Monitor State",
    "deleteMonitorStateText1": "Do you want to delete this Monitor States Preset? The monitor configurations associated cannot be recovered.",
    "deleteMonitorStateText2": "Do you want to delete this Monitor's Preset?",
+   "undoAllUnsaveChanges": "Are you sure you want to do this? This will undo all unsaved changes.",
    "monitorStatesError": "Monitor Presets Error",
    "monitorStateNotEnoughChanges": "You need to make a change in your monitor configuration before attempting to add it to a Preset.",
    "Search Images": "Search Images",
