Minor Adjustments to UI, swap Mode changing button with Event Trigger button

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -502,6 +502,7 @@
    "Width": "Width",
    "Height": "Height",
    "Rotate": "Rotate",
+   "Trigger Event": "Trigger Event",
    "Primary Engine": "Primary Engine",
    "Video Filter": "Video Filter",
    "Font Path": "Font Path",
@@ -519,7 +520,9 @@
    "Notification Video Length": "Notification Video Length",
    "Video Codec": "Video Codec",
    "Delete Monitor States Preset": "Delete Monitor States Preset",
+   "Delete Schedule": "Delete Schedule",
    "Delete Monitor State?": "Delete Monitor State",
+   "deleteScheduleText": "Do you want to delete this Schedule? Monitor Presets associated will not be modified..",
    "deleteMonitorStateText1": "Do you want to delete this Monitor States Preset? The monitor configurations associated cannot be recovered.",
    "deleteMonitorStateText2": "Do you want to delete this Monitor's Preset?",
    "undoAllUnsaveChanges": "Are you sure you want to do this? This will undo all unsaved changes.",
