Better ONVIF Scanner, now displays all found network devices
- Will now display ONVIF devices if auth fails
- will now display all network devices with operating web panels

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -242,6 +242,9 @@
    "ONVIF Scanner": "ONVIF Scanner",
    "ONVIFEventsNotAvailable": "ONVIF Events not Available",
    "ONVIFnotCompliantProfileT": "Camera is not ONVIF Profile T Compliant",
+   "ONVIFErr400": "Found ONVIF port but authorization failed when retrieving the Stream URL. Check username and password used for scan.",
+   "ONVIFErr405": "Method Not Allowed. Check username and password used for scan.",
+   "ONVIFErr404": "Not Found. This may just be the web panel for a network device.",
    "Scan Settings": "Scan Settings",
    "ONVIFnote": "Discover ONVIF devices on networks outside your own or leave it blank to scan your current network. <br>Username and Password can be left blank.",
    "Range or Single": "Range or Single",
