--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -238,6 +238,7 @@
    "Video stream only from first feed": "Video stream only from first feed",
    "Audio streams only": "Audio streams only",
    "Audio stream only from first feed": "Audio stream only from first feed",
+   "sorryNothingWasFound": "Sorry, nothing was found.",
    "ONVIF Port": "ONVIF Port",
    "ONVIF Scanner": "ONVIF Scanner",
    "ONVIFEventsNotAvailable": "ONVIF Events not Available",
