Allow PTZ Tracking any Object Tag

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -33,7 +33,8 @@
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
-   "PTZ Follow": "PTZ Follow",
+   "PTZ Tracking": "PTZ Tracking",
+   "PTZ Tracking Target": "PTZ Tracking Target",
    "Event Counts": "Event Counts",
    "Already Processing": "Already Processing",
    "No API Key": "No API Key",
