baisc Google Drive support for Auto Backup
- Cannot view videos or timelapse frames in the Shinobi Dashboard, must view them in Google Drive File Explorer

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -33,6 +33,11 @@
    "RAM": "RAM",
    "CPU": "CPU",
    "on": "on",
+   "OAuth Credentials": "OAuth Credentials",
+   "Token": "Token",
+   "OAuth Code": "OAuth Code",
+   "Google Drive": "Google Drive",
+   "Get Code": "Get Code",
    "PTZ Tracking": "PTZ Tracking",
    "PTZ Tracking Target": "PTZ Tracking Target",
    "Event Counts": "Event Counts",
