--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -1010,5 +1010,6 @@
    "There are no monitors that you can view with this account.":"There are no monitors that you can view with this account.",
    "Delete Monitors and Files": "Delete Monitors and Files",
    "Select atleast one monitor to delete": "Select atleast one monitor to delete.",
-   "Use Built-In":"Use Built-In"
+   "Use Built-In":"Use Built-In",
+   "Start recording on motion":"Start recording on motion"
 }
