--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -199,6 +199,7 @@
    "File Type": "File Type",
    "Filesize": "Filesize",
    "Video Status": "Video Status",
+   "Custom Auto Load": "Custom Auto Load",
    "Preferences": "Preferences",
    "Equal to": "Equal to",
    "Not Equal to": "Not Equal to",
@@ -482,6 +483,10 @@
    "DetectorText": "<p>When the Width and Height boxes are shown you should set them to 640x480 or below. This will optimize the read speed of frames.</p>",
    "RecordingText": "It is recommended that you set <b>Record File Type</b> to <b class=\"h_t_input h_t_jpeg h_t_socket\">WebM</b><b class=\"h_t_input h_t_mjpeg h_t_h264 h_t_hls h_t_mp4 h_t_local\">MP4</b> and <b>Video Codec</b> to <b class=\"h_t_input h_t_jpeg h_t_socket\">libvpx</b><b class=\"h_t_input h_t_h264 h_t_hls h_t_mp4\">copy or </b><b class=\"h_t_input h_t_mjpeg h_t_h264 h_t_hls h_t_mp4 h_t_local\">libx264</b> because your <b>Input Type</b> is set to <b class=\"h_t_text\"></b>.",
    "Mode": "Mode",
+   "Install": "Install",
+   "Enable": "Enable",
+   "Disable": "Disable",
+   "Delete": "Delete",
    "Name": "Name",
    "Skip Ping": "Skip Ping",
    "Retry Connection": "Retry Connection <small>Number of times allowed to fail</small>",
