--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -587,6 +587,7 @@
    "Attach Video Clip": "Attach Video Clip",
    "Error While Decoding": "Error While Decoding",
    "ErrorWhileDecodingText": "Your hardware may have an unstable connection to the network. Check your network connections.",
+   "ErrorWhileDecodingTextAudio": "Your camera is providing broken data. Try disabling the Audio in the camera's internal settings.",
    "Discord": "Discord",
    "Discord Alert on Trigger": "Discord Alert on Trigger",
    "Allow Next Email": "Allow Next Email <small>in Minutes</small>",
