--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -37,6 +37,7 @@
    "Token": "Token",
    "OAuth Code": "OAuth Code",
    "Google Drive": "Google Drive",
+   "Invert Y-Axis": "Invert Y-Axis",
    "Get Code": "Get Code",
    "PTZ Tracking": "PTZ Tracking",
    "PTZ Tracking Target": "PTZ Tracking Target",
@@ -88,6 +89,7 @@
    "Never": "Never",
    "API": "API",
    "ONVIF": "ONVIF",
+   "Non-Standard ONVIF": "Non-Standard ONVIF",
    "FFprobe": "Probe",
    "Monitor States": "Monitor States",
    "Schedule": "Schedule",
