Add UI for Easy Remote Access (P2P) in Superuser panel

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -204,6 +204,11 @@
    "Filesize": "Filesize",
    "Video Status": "Video Status",
    "Custom Auto Load": "Custom Auto Load",
+   "Easy Remote Access (P2P)": "Easy Remote Access (P2P)",
+   "P2P Settings Applied": "P2P Settings Applied",
+   "p2pSettingsText1": "You will need to refresh this page for changes to be applied.",
+   "P2P Host": "P2P Host",
+   "P2P API Key": "P2P API Key",
    "Preferences": "Preferences",
    "Equal to": "Equal to",
    "Not Equal to": "Not Equal to",
