begin proper secton for Notification toggles
- Future versions may have breaking changes involving notifications. Currently each type of notification has a toggle for each method. It will be mad so that a Method is the toggle for all types of Notifications and each type of Notifications will have a single toggle. This will be to mitigate the speed of the ever-growing numer of options.

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -199,6 +199,9 @@
    "Start Time": "Start Time",
    "End Time": "End Time",
    "Time": "Time",
+   "On Unexpected Exit": "On Unexpected Exit",
+   "Methods": "Methods",
+   "Notifications": "Notifications",
    "Monitor ID": "Monitor ID",
    "File Type": "File Type",
    "Filesize": "Filesize",
