Add Production P2P Servers to list in Super User Panel

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -192,6 +192,7 @@
    "Filter Name": "Filter Name",
    "Find Where": "Find Where",
    "Reason": "Reason",
+   "Open Dashboard Remotely": "Open Dashboard Remotely",
    "Detection Engine": "Detection Engine",
    "X Point": "X Point",
    "Y Point": "Y Point",
@@ -210,6 +211,8 @@
    "Easy Remote Access (P2P)": "Easy Remote Access (P2P)",
    "P2P Settings Applied": "P2P Settings Applied",
    "p2pSettingsText1": "You will need to refresh this page for changes to be applied.",
+   "P2P Server Not Selected": "P2P Server Not Selected",
+   "p2pServerNotSelectedText": "Select a server from the list and press Save. Wait 10 seconds then attempt to open the dashboard remotely.",
    "P2P Host": "P2P Host",
    "P2P API Key": "P2P API Key",
    "Preferences": "Preferences",
