--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -32,6 +32,7 @@
    "Pause": "Pause",
    "RAM": "RAM",
    "CPU": "CPU",
+   "Cores": "Cores",
    "on": "on",
    "OAuth Credentials": "OAuth Credentials",
    "Token": "Token",
@@ -201,6 +202,7 @@
    "End Time": "End Time",
    "Time": "Time",
    "On Unexpected Exit": "On Unexpected Exit",
+   "Bandwidth": "Bandwidth",
    "Methods": "Methods",
    "Notifications": "Notifications",
    "Monitor ID": "Monitor ID",
