humanize P2P UI more

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -33,6 +33,9 @@
    "RAM": "RAM",
    "CPU": "CPU",
    "Cores": "Cores",
+   "Threads": "Threads",
+   "Download Bandwidth": "Download Bandwidth",
+   "Upload Bandwidth": "Upload Bandwidth",
    "on": "on",
    "OAuth Credentials": "OAuth Credentials",
    "Token": "Token",
@@ -193,7 +196,8 @@
    "Filter Name": "Filter Name",
    "Find Where": "Find Where",
    "Reason": "Reason",
-   "Open Dashboard Remotely": "Open Dashboard Remotely",
+   "Copy Remote Link": "Copy Remote Link",
+   "Open Remote Dashboard": "Open Remote Dashboard",
    "Detection Engine": "Detection Engine",
    "X Point": "X Point",
    "Y Point": "Y Point",
@@ -236,6 +240,7 @@
    "ASC": "ASC",
    "DESC": "DESC",
    "Action for Selected": "Action for Selected",
+   "Selected": "Selected",
    "Search": "Search",
    "No": "No",
    "Yes": "Yes",
