add feedback for copying to clipboard

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -34,6 +34,7 @@
    "CPU": "CPU",
    "Cores": "Cores",
    "Threads": "Threads",
+   "Copied to Clipboard": "Copied to Clipboard",
    "Download Bandwidth": "Download Bandwidth",
    "Upload Bandwidth": "Upload Bandwidth",
    "on": "on",
